# mlir-syntax

./: CMakeLists.txt
cmake/: ExportSchemeFFI.cmake  FindMLIR.cmake
scripts/debian_dockerfile/: Dockerfile  llvm.sources
tools/: CMakeLists.txt  mlir_capi_exporter.cpp
